@@ -62,7 +62,7 @@ static List dbd_config_list = NULL;
 
 static void _load_dbd_config(void)
 {
-	dbd_config_list = acct_storage_g_get_config(db_conn);
+	dbd_config_list = slurmdb_config_get(db_conn);
 }
 
 static void _print_dbd_config(void)
